--- a/src/pages/list/List.scss
+++ b/src/pages/list/List.scss
@@ -2,8 +2,8 @@
   position: relative;
   width: 25%;
   position: fixed;
-  float: inline-start;
-  margin: 20px;
+  float: left;
+  margin: 3%;
 }
 
 .image {
